plugins {
    id 'com.android.application'
}


// 函數：獲取最後一次 Git commit 說明
def getLastCommitMessage() {
    try {
        def process = ['git', 'log', '-1', '--pretty=%B'].execute()
        process.waitFor()
        return process.text.trim()
    } catch (Exception e) {
        return "No commit message available"
    }
}


def versionPropsFile = file('version.properties')
def versionProps = new Properties()

if (versionPropsFile.exists()) {
    versionProps.load(new FileInputStream(versionPropsFile))
} else {
    versionProps['VERSION_CODE'] = "1"
    versionProps['VERSION_NAME'] = "1.0.0"
}

def autoVersionCode = versionProps['VERSION_CODE'].toInteger() + 1
def autoVersionName = versionProps['VERSION_NAME']

// 1. 將進版邏輯移到最外層，確保每次 build 只執行一次
def versionParts = autoVersionName.split('\\.')
if (versionParts.size() > 0) {
    try {
        def lastNumber = (versionParts.last() as Integer) + 1
        versionParts[-1] = lastNumber.toString()
        autoVersionName = versionParts.join('.')
    } catch (Exception ignored) {
    }
}

// 2. 立即更新 Properties 對象
versionProps['VERSION_CODE'] = autoVersionCode.toString()
versionProps['VERSION_NAME'] = autoVersionName
versionProps.store(new FileOutputStream(versionPropsFile), null)

// 在 Release build 時動態更新 versionName
android.applicationVariants.configureEach { variant ->
    if (variant.buildType.name == 'release') {
        // 更新 versionName 給當前 variant
        variant.outputs.configureEach { output ->
            output.versionNameOverride = autoVersionName
        }

        // 生成 leanback.json，存到臨時目錄 release_output/<flavor>
        variant.outputs.configureEach { output ->
            def flavorDirName = "${variant.productFlavors[0].name}${variant.productFlavors[1].name}${variant.productFlavors[2].name}"
            def targetOutputDir = file("${project.projectDir}/release_output/${flavorDirName}")
            def jsonFile = new File(targetOutputDir, "leanback.json")
            def commitMessage = getLastCommitMessage()
            def jsonContent = """{
    "name": "${autoVersionName}",
    "desc": "${commitMessage}",
    "code": "${autoVersionCode}"
}"""
            targetOutputDir.mkdirs() // 確保臨時目錄存在
            jsonFile.text = jsonContent

            // 在 assemble 任務完成後複製 leanback.json 到 variant 輸出目錄
            variant.assembleProvider.get().doLast {
                def variantOutputDir = output.outputFile.parentFile
                variantOutputDir.mkdirs() // 確保 variant 輸出目錄存在
                copy {
                    from jsonFile
                    into variantOutputDir
                }
                // 2. 新增：將編譯好的 APK 複製到指定的 release_output 目錄下
                copy {
                    from output.outputFile
                    into targetOutputDir
                }
            }
        }
    }
}

android {
    namespace 'com.fongmi.android.tv'
    compileSdk 35

    flavorDimensions = ["mode", "api", "abi"]

    defaultConfig {
        applicationId "com.fongmi.android.tv"
        minSdk 21
        //noinspection ExpiredTargetSdkVersion
        targetSdk 28
        versionCode = autoVersionCode
        versionName = autoVersionName

        //versionCode 262
        //versionName "Rocker-2.6.2"
        javaCompileOptions {
            annotationProcessorOptions {
                //arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString(), "eventBusIndex": "com.fongmi.android.tv.event.EventIndex"]
            }
        }
    }

    productFlavors {
        mobile {
            dimension 'mode'
        }
        java {
            dimension "api"
        }
        python {
            dimension "api"
        }
        arm64_v8a {
            dimension "abi"
            //noinspection ChromeOsAbiSupport
            ndk { abiFilters "arm64-v8a" }
        }
        armeabi_v7a {
            dimension "abi"
            //noinspection ChromeOsAbiSupport
            ndk { abiFilters "armeabi-v7a" }
        }
        leanback {
            dimension 'mode'
        }
        x86 {
            dimension 'abi'
            //noinspection ChromeOsAbiSupport
            ndk { abiFilters "x86" }
        }
        x86_64 {
            dimension 'abi'
        }
    }

    buildFeatures {
        buildConfig true
        viewBinding true
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.debug
        }
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/beans.xml']

            // Exclude META-INF/NOTICE.markdown from the APK/AAR
            //exclude 'META-INF/NOTICE.markdown'
            // Optionally, you can also exclude other common conflicting files

            excludes += ['META-INF/NOTICE.md']
            excludes += ['META-INF/NOTICE.txt']
            excludes += ['META-INF/NOTICE.markdown']
            excludes += ['META-INF/LICENSE.txt']
            excludes += ['META-INF/LICENSE.md']
        }
    }


    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11

        // 修正這行（移除 is，移除等號）
        coreLibraryDesugaringEnabled true
    }

    android.applicationVariants.configureEach { variant ->
        variant.outputs.configureEach { output ->
            outputFileName = "${variant.productFlavors[0].name}-${variant.productFlavors[1].name}-${variant.productFlavors[2].name}-${variant.buildType.name}.apk"
        }
    }

    //android.applicationVariants.all { variant ->
    android.applicationVariants.configureEach { variant ->
            if (variant.buildType.name == 'release' && variant.productFlavors[0].name == 'mobile') {
            //variant.mergeAssets.doLast {
            variant.mergeAssetsProvider.get().doLast {
                delete(fileTree(dir: variant.mergeAssets.outputDir, includes: ['x5.tbs.apk']))
            }
        }
    }

    configurations.configureEach {
        resolutionStrategy {
            force 'com.squareup.okhttp3:okhttp:' + okhttpVersion
        }
    }

    lint {
        disable 'UnsafeOptInUsageError'
    }
}

dependencies {
    implementation project(':hook')
    implementation project(':tvbus')
    implementation project(':zlive')
    implementation project(':catvod')
    implementation project(':quickjs')
    implementation project(':thunder')
    implementation project(':youtube')
    implementation project(':jianpian')
    implementation project(':forcetech')
    implementation project(':ijkplayer')
    implementation project(':pyramid')

    implementation 'androidx.media3:media3-datasource-okhttp:' + media3Version
    implementation 'androidx.media3:media3-datasource-rtmp:' + media3Version
    implementation "androidx.media3:media3-datasource:" + media3Version
    implementation 'androidx.media3:media3-exoplayer:' + media3Version
    //implementation 'androidx.media3:media3-exoplayer-core:' + media3Version
    implementation 'androidx.media3:media3-exoplayer-dash:' + media3Version
    implementation 'androidx.media3:media3-exoplayer-hls:' + media3Version
    implementation 'androidx.media3:media3-exoplayer-rtsp:' + media3Version
    implementation 'androidx.media3:media3-exoplayer-smoothstreaming:' + media3Version
    implementation 'androidx.media3:media3-ui:' + media3Version
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.biometric:biometric:1.1.0'
    implementation 'androidx.room:room-runtime:2.6.1'
    implementation 'androidx.media:media:1.7.0'
    implementation 'cat.ereza:customactivityoncrash:2.4.0'
    implementation('com.github.anilbeesetti.nextlib:nextlib-media3ext:0.8.2') { exclude group: 'androidx.media3', module: 'media3-exoplayer' }
    implementation 'com.github.bassaer:materialdesigncolors:1.0.0'
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation 'com.github.bumptech.glide:annotations:4.16.0'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.16.0'
    implementation 'com.github.jahirfiquitiva:TextDrawable:1.0.3'
    implementation 'com.github.thegrizzlylabs:sardine-android:0.9'
    implementation 'com.github.YarikSOffice:lingver:1.3.0'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.google.net.cronet:cronet-okhttp:0.1.0'
    implementation 'com.google.zxing:core:3.3.0'
    implementation 'com.guolindev.permissionx:permissionx:1.8.0'
    implementation 'com.hierynomus:smbj:0.13.0'
    implementation 'com.tencent.tbs:tbssdk:44286'
    implementation 'javax.servlet:javax.servlet-api:3.1.0'
    implementation 'org.chromium.net:cronet-embedded:76.3809.111'
    implementation 'org.eclipse.jetty:jetty-client:8.1.22.v20160922'
    implementation('org.eclipse.jetty:jetty-server:8.1.22.v20160922') { exclude group: 'org.eclipse.jetty.orbit', module: 'javax.servlet' }
    implementation('org.eclipse.jetty:jetty-servlet:8.1.22.v20160922') { exclude group: 'org.eclipse.jetty.orbit', module: 'javax.servlet' }
    implementation 'org.fourthline.cling:cling-core:2.1.2-SNAPSHOT'
    implementation 'org.fourthline.cling:cling-support:2.1.2-SNAPSHOT'
    implementation 'org.greenrobot:eventbus:3.3.1'
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    //implementation 'commons-net:commons-net:3.9.0'
    //implementation("commons-net:commons-net:3.11.1")
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation "androidx.viewpager2:viewpager2:1.0.0"


    implementation('org.simpleframework:simple-xml:2.7.1') { exclude group: 'stax', module: 'stax-api' exclude group: 'xpp3', module: 'xpp3' }
    implementation(ext: 'aar', name: 'danmaku', group: 'fongmi', version: 'release')
    implementation(ext: 'aar', name: 'dlna-core-release', group: 'fongmi', version: 'release')
    implementation(ext: 'aar', name: 'dlna-dmc-release', group: 'fongmi', version: 'release')
    implementation(ext: 'aar', name: 'dlna-dmr-release', group: 'fongmi', version: 'release')
    implementation files('libs/commons-net-3.11.1.jar')
    //implementation files('libs/fastjson-2.0.9.jar')
    //implementation files('libs/fastjson2-2.0.53.jar')
    leanbackImplementation 'androidx.leanback:leanback:1.2.0-alpha04'
    leanbackImplementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
    leanbackImplementation 'com.github.JessYanCoding:AndroidAutoSize:1.2.1'
    mobileImplementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    mobileImplementation 'com.google.android.flexbox:flexbox:3.0.0'
    mobileImplementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
    annotationProcessor 'androidx.room:room-compiler:2.6.1'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
    annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.3.1'

    // 引入脫糖專用庫 (請依據你的 Gradle 變更最新版本)
    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.2")

    //implementation 'org.glassfish.jersey.core:jersey-server:2.46'  // Replace with your version
    //implementation 'org.glassfish.jersey.core:jersey-client:2.46'  // Optional if using Jersey client
}
